@@ -1,6 +1,6 @@
 project.dir=
 project.name=phpmd
-project.version=0.2.2
+project.version=0.2.3
 project.stability=alpha
 
 coding.standard=PEAR
